# cfa-ring-vax-widget

./: .gitignore  Makefile  README.md  app.py  deploy.yaml  devfile.yaml  pyproject.toml
.github/workflows/: run-pytest.yaml
docs/: approach.md  fwd.md  index.md
ringvax/: __init__.py  app.py  plot.py  summary.py
scratch/: demo.py  plotting.py
tests/: test_app.py  test_simulate.py  test_summary.py
tests/data/: snapshot.json
widget/: widget.py
